@@ -1756,24 +1756,6 @@ class HasRounds(GenericHandler):
             # the time-cost, and can't be randomized.
         return info
 
-    @classmethod
-    def parse_rounds(cls, hash):
-        """
-        [experimental method] returns rounds value from hash
-
-        .. warning::
-
-            this is needed so :class:`passlib.context._CryptRecord` can reliably figure out
-            the rounds being used by a given hash, even if the handler is a PrefixWrapper.
-
-            added in 1.6.6, this is just a stopgap until 1.7 is released, and the whole
-            needs_update() framework has been revamped so _CryptRecord doesn't need to poke
-            into handler internals anymore.
-
-            this method will be removed in 1.7.
-        """
-        return cls.from_string(hash).rounds
-
     #===================================================================
     # eoc
     #===================================================================
@@ -2135,10 +2117,6 @@ class PrefixWrapper(object):
         # store reference
         self._wrapped_handler = handler
 
-        # init parse_rounds() proxy if applicable
-        if hasattr(handler, "parse_rounds"):
-            self.parse_rounds = self.__parse_rounds
-
     def _get_wrapped(self):
         handler = self._wrapped_handler
         if handler is None:
@@ -2283,12 +2261,6 @@ class PrefixWrapper(object):
         hash = to_unicode(hash, "ascii", "hash")
         hash = self._unwrap_hash(hash)
         return self.wrapped.verify(secret, hash, **kwds)
-
-    def __parse_rounds(self, hash):
-        """parse_rounds() wrapper - exposed only if wrapped handler supports it"""
-        hash = to_unicode(hash, "ascii", "hash")
-        hash = self._unwrap_hash(hash)
-        return self.wrapped.parse_rounds(hash)
 
 #=============================================================================
 # eof
